--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,39 @@
 <!doctype html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый проект</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    <div class="promo">
-        <div class="promo-inner">
-            <h1 class="promo-ttl">Заголовок сайта</h1>
-            <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное</p>
-        </div>
-    </div>
 
-    <script src="scripts/script.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Butterfly</title>
+  <link rel="stylesheet" href="style/style.css">
+</head>
+
+<body>
+  <header class="header">
+    <a href="#" class="logo">Butterfly</a>
+  </header>
+
+  <section class="promo">
+    <h1>Индивидуальный пошив галстуков-бабочек</h1>
+  </section>
+
+  <section class="portfolio">
+    <h2>Наши работы</h2>
+
+  </section>
+
+  <section class="order">
+    <h2>Закажи пошив</h2>
+    <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и
+      поможет обределиться с тканью.</p>
+
+  </section>
+
+  <footer class="footer">
+    <p>+7 812 800-80-80</p>
+  </footer>
+
+  <script src="scripts/script.js"></script>
 </body>
+
 </html>
