сделал header полностью

--- a/www/index.html
+++ b/www/index.html
@@ -10,24 +10,41 @@
 
 <body>
   <header class="header">
-    <a href="#" class="logo">Butterfly</a>
+    <div class="header-inner">
+      <div class="header-wrap">
+        <a href="#" class="logo">Butterfly</a>
+        <nav class="main-nav">
+          <ul>
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Отзывы</a></li>
+            <li><a href="">Контакты</a></li>
+            <li><a href="">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
   </header>
 
-  <section class="promo">
-    <h1>Индивидуальный пошив галстуков-бабочек</h1>
-  </section>
+  <main>
+    <section class="promo">
+      <h1>Индивидуальный пошив галстуков-бабочек</h1>
+    </section>
 
-  <section class="portfolio">
-    <h2>Наши работы</h2>
+    <section class="portfolio">
+      <h2>Наши работы</h2>
 
-  </section>
+    </section>
 
-  <section class="order">
-    <h2>Закажи пошив</h2>
-    <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и
-      поможет обределиться с тканью.</p>
+    <section class="order">
+      <h2>Закажи пошив</h2>
+      <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и
+        поможет обределиться с тканью.</p>
 
-  </section>
+    </section>
+  </main>
+
+
 
   <footer class="footer">
     <p>+7 812 800-80-80</p>
