--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,16 @@
 
   <main>
     <section class="promo">
-      <h1>Индивидуальный пошив галстуков-бабочек</h1>
+      <div class="promo-inner">
+        <div class="promo-fade">
+          <div class="promo-title">
+            <h1>Индивидуальный пошив галстуков-бабочек</h1>
+          </div>
+          <a href="#" class="btn"> Заказать бабочку </a>
+        </div>
+
+      </div>
+
     </section>
 
     <section class="portfolio">
