--- a/www/index.html
+++ b/www/index.html
@@ -28,20 +28,21 @@
 
   <main>
     <section class="promo">
-      <div class="promo-inner">
-        <div class="promo-fade">
-          <div class="promo-title">
-            <h1>Индивидуальный пошив галстуков-бабочек</h1>
-          </div>
-          <a href="#" class="btn"> Заказать бабочку </a>
+      <div class="promo-fade">
+        <div class="promo-inner">
+          <h1 class="promo-title">Индивидуальный пошив галстуков-бабочек</h1>
+          <a href="#" class="btn">Заказать бабочку</a>
         </div>
-
       </div>
 
     </section>
 
     <section class="portfolio">
-      <h2>Наши работы</h2>
+      <div class="portfolio-inner">
+        <h2 class="portfolio-title">Наши работы</h2>
+
+      </div>
+
 
     </section>
 
