Доделал основную страницу,кроме блока с формой

--- a/www/index.html
+++ b/www/index.html
@@ -40,10 +40,27 @@
     <section class="portfolio">
       <div class="portfolio-inner">
         <h2 class="portfolio-title">Наши работы</h2>
+        <div class="portfolio-visual">
+          <figure class="portfolio-figure">
+            <img src="images/one-butterfly.png" alt="одна синяя галстук-бабочка" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка такая</figcaption>
+          </figure>
+          <figure class="portfolio-figure">
+            <img src="images/two-butterfly.jpg" alt="две синие галстук-бабочки" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка растакая</figcaption>
+          </figure>
+          <figure class="portfolio-figure">
+            <img src="images/men-butterfly.png" alt="мужчина в галстук-бабочке" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка сякая</figcaption>
+          </figure>
+          <figure class="portfolio-figure">
+            <img src="images/cat-butterfly.png" alt="кот в галстук-бабочке" class="portfolio-image">
+            <figcaption class="portfolio-desc">Кривая</figcaption>
+          </figure>
+        </div>
 
+      <a href="#" class="btn">Все бабочки</a>
       </div>
-
-
     </section>
 
     <section class="order">
@@ -57,7 +74,29 @@
 
 
   <footer class="footer">
-    <p>+7 812 800-80-80</p>
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <a href="#" class="logo">Butterfly</a>
+        <a href="tel: +78008000000" class="phone">+7 812 800-80-80</a>
+        <ul class="social">
+          <li class="social-item">
+            <a href="#" class="social-link" style="background-image: url(images/icon-instagram.svg);">
+              <span class="social-text">Наш аккаунт в Инстаграмм</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link" style="background-image: url(images/icon-facebook.svg);">
+              <span class="social-text">Наш аккаунт в Facebook</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link" style="background-image: url(images/icon-telegram.svg);">
+              <span class="social-text">Наш аккаунт в Telegram</span>
+            </a>
+          </li>
+      </div>
+    </div>
+
   </footer>
 
   <script src="scripts/script.js"></script>
