почти закончил адаптив под моб.устр-ва

--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
-        <a href="#" class="logo logo-transparent">Butterfly</a>
+        <a href="#" class="logo">Butterfly</a>
         <a href="tel: +78008000000" class="phone">+7 812 800-80-80</a>
         <ul class="social">
           <li class="social-item">
