--- a/www/index.html
+++ b/www/index.html
@@ -65,9 +65,25 @@
     </section>
 
     <section class="order">
-      <h2>Закажи пошив</h2>
-      <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и
-        поможет обределиться с тканью.</p>
+      <div class="order-inner">
+        <h2 class="order-title">Закажи пошив</h2>
+        <p class="order-text">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и
+          поможет обределиться с тканью.</p>
+        <form action="#" class="form">
+          <div class="form-field form-field-third">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input id="name" type="text" class="form-input">
+          </div>
+          <div class="form-field form-field-third">
+            <label for="phone" class="form-label">Телефон</label>
+            <input id="phone" type="text" class="form-input">
+          </div>
+          <div class="form-field form-field-third">
+            <button type="submit" class="btn btn-form">Заказать</button>
+          </div>
+        </form>
+      </div>
+
 
     </section>
   </main>
