полностью закончил и адаптировал главную страницу butterfly-shop

--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
           </figure>
         </div>
 
-      <a href="#" class="btn">Все бабочки</a>
+      <a href="#" class="btn">       Все бабочки       </a>
       </div>
     </section>
 
@@ -70,11 +70,11 @@
         <p class="order-text">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и
           поможет обределиться с тканью.</p>
         <form action="#" class="form">
-          <div class="form-field form-field-third">
+          <div class="form-field form-field-half">
             <label for="name" class="form-label">Ваше имя</label>
             <input id="name" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-third">
+          <div class="form-field form-field-half">
             <label for="phone" class="form-label">Телефон</label>
             <input id="phone" type="text" class="form-input">
           </div>
