добавил вторую страницу,подключил jquery

--- a/www/catalog.html
+++ b/www/catalog.html
@@ -12,10 +12,10 @@
   <header class="header">
     <div class="header-inner">
       <div class="header-wrap">
-        <a href="#" class="logo">Butterfly</a>
+        <a href="index.html" class="logo">Butterfly</a>
         <nav class="main-nav">
           <ul>
-            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="">Каталог</a></li>
             <li><a href="">Отзывы</a></li>
             <li><a href="">Контакты</a></li>
             <li><a href="">FAQ</a></li>
@@ -28,15 +28,6 @@
   </header>
 
   <main>
-    <section class="promo">
-      <div class="promo-fade">
-        <div class="promo-inner">
-          <h1 class="promo-title">Индивидуальный пошив галстуков-бабочек</h1>
-          <a href="#" class="btn">Заказать бабочку</a>
-        </div>
-      </div>
-
-    </section>
 
     <section class="portfolio">
       <div class="portfolio-inner">
