--- a/www/contacts.html
+++ b/www/contacts.html
@@ -18,7 +18,7 @@
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Отзывы</a></li>
             <li><a href="contacts.html">Контакты</a></li>
-            <li><a href="">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
         </nav>
         <button class="burger">menu</button>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="contacts-visual">
-              <img src="../images/map-ekt.png" alt="" class="contacts-image">
+              <img src="../images/map-ekt.png" alt="Сервис-центр на карте Екатеринбурга" class="contacts-image">
             </div>
           </div>
 
