--- a/www/faq.html
+++ b/www/faq.html
@@ -29,31 +29,41 @@
 
   <main>
 
-    <section class="portfolio">
-      <div class="portfolio-inner">
-        <h2 class="portfolio-title">Наши работы</h2>
-        <div class="portfolio-visual">
-          <figure class="portfolio-figure">
-            <img src="images/one-butterfly.png" alt="одна синяя галстук-бабочка" class="portfolio-image">
-            <figcaption class="portfolio-desc">Бабочка такая</figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <img src="images/two-butterfly.jpg" alt="две синие галстук-бабочки" class="portfolio-image">
-            <figcaption class="portfolio-desc">Бабочка растакая</figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <img src="images/men-butterfly.png" alt="мужчина в галстук-бабочке" class="portfolio-image">
-            <figcaption class="portfolio-desc">Бабочка сякая</figcaption>
-          </figure>
-          <figure class="portfolio-figure">
-            <img src="images/cat-butterfly.png" alt="кот в галстук-бабочке" class="portfolio-image">
-            <figcaption class="portfolio-desc">Кривая</figcaption>
-          </figure>
+    <section class="faq">
+      <div class="faq-inner">
+        <h1 class="faq-title">Как мы работаем</h1>
+
+        <div class="accordeon">
+          <button class="accordeon-question">
+            Как можно оплатить заказ?
+            <i class="accordeon-icon">
+              <img src="../images/icon-plus (1).svg" alt="Иконка плюс">
+            </i>
+          </button>
+          <div class="accordeon-answear">
+            <p>Для операции с наличными выберите соответствующий способ оплаты и укажите номер своего мобильного телефона. В этом же окне вам будет предоставлен полный список партнерских салонов, в которых можно произвести оплату.</p>
+          </div>
         </div>
 
-      <a href="#" class="btn">       Все бабочки       </a>
+        <div class="accordeon">
+          <button class="accordeon-question">
+            Как получить готовый заказ?
+            <i class="accordeon-icon accordeon-icon-minus">
+              <img src="../images/icon-minus.svg" alt="Иконка минус">
+            </i>
+          </button>
+          <div class="accordeon-answear">
+            <p>Когда товар окажется в пункте выдачи, вам в почтовый ящик придет извещение. Его нужно заполнить (внести паспортные данные, указать дату и поставить подпись) и предъявить в пункте выдачи вместе с паспортом. В отделе выдачи посылок ваши документы проверят, после чего вы получите посылку.
+            Впрочем, можно и не ждать извещения. Если сервис по отслеживанию показывает, что посылка пришла, возьмите паспорт, придите в отделение почты и попросите проверить, пришел ли товар на ваш адрес.
+            </p>
+          </div>
+        </div>
+
       </div>
     </section>
+
+
+
 
     <section class="order">
       <div class="order-inner">
