--- a/www/index.html
+++ b/www/index.html
@@ -12,13 +12,13 @@
   <header class="header">
     <div class="header-inner">
       <div class="header-wrap">
-        <a href="#" class="logo">Butterfly</a>
+        <a href="index.html" class="logo">Butterfly</a>
         <nav class="main-nav">
           <ul>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Отзывы</a></li>
             <li><a href="contacts.html">Контакты</a></li>
-            <li><a href="">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
         </nav>
         <button class="burger">menu</button>
