сделал страницу отзывов,слайдер,кнопки prev и next

--- a/www/reviews.html
+++ b/www/reviews.html
@@ -29,36 +29,48 @@
 
   <main>
 
-    <section class="faq">
-      <div class="faq-inner">
-        <h1 class="faq-title">Как мы работаем</h1>
+    <section class="reviews">
+      <div class="reviews-inner">
+        <h1 class="reviews-title">Отзывы</h1>
 
-        <div class="accordeon">
-          <button class="accordeon-question">
-            Как можно оплатить заказ?
-            <i class="accordeon-icon">
-              <img src="../images/icon-plus (1).svg" alt="Иконка плюс">
-            </i>
-          </button>
-          <div class="accordeon-answear">
-            <p>Для операции с наличными выберите соответствующий способ оплаты и укажите номер своего мобильного телефона. В этом же окне вам будет предоставлен полный список партнерских салонов, в которых можно произвести оплату.</p>
+        <div class="reviews-wrap">
+          <div class="reviews-slider">
+            <div class="reviews-ava">
+              <img src="../images/review-lidia.png" alt="Фото Лидии" class="reviews-photo">
+            </div>
+            <div class="reviews-content">
+              <span class="review-name">Лидия Ивановна</span>
+              <blockquote class="review-quote">
+                Пацаны красавчики! Быстро и аккуратно починили мой лододос!
+              А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!
+              </blockquote>
+            </div>
           </div>
-        </div>
 
-        <div class="accordeon">
-          <button class="accordeon-question">
-            Как получить готовый заказ?
-            <i class="accordeon-icon accordeon-icon-minus">
-              <img src="../images/icon-minus.svg" alt="Иконка минус">
-            </i>
-          </button>
-          <div class="accordeon-answear">
-            <p>Когда товар окажется в пункте выдачи, вам в почтовый ящик придет извещение. Его нужно заполнить (внести паспортные данные, указать дату и поставить подпись) и предъявить в пункте выдачи вместе с паспортом. В отделе выдачи посылок ваши документы проверят, после чего вы получите посылку.
-            Впрочем, можно и не ждать извещения. Если сервис по отслеживанию показывает, что посылка пришла, возьмите паспорт, придите в отделение почты и попросите проверить, пришел ли товар на ваш адрес.
-            </p>
+          <div class="reviews-slider">
+            <div class="reviews-ava">
+              <img src="../images/review-irina.png" alt="Фото Ирины" class="reviews-photo">
+            </div>
+            <div class="reviews-content">
+              <span class="review-name">Ирина</span>
+              <blockquote class="review-quote">
+                Всем вам доброго времени суток, дорогие мои! Я обожаю галстуки-бабочки! Мужские не покупаю, а люблю, всё-таки, женские, которые выглядят как унисекс.
+              </blockquote>
+            </div>
           </div>
-        </div>
+          <div class="reviews-slider">
+            <div class="reviews-ava">
+              <img src="../images/review-valdemar.png" alt="Фото Вальдемара" class="reviews-photo">
+            </div>
+            <div class="reviews-content">
+              <span class="review-name">Вальдемар</span>
+              <blockquote class="review-quote">
+                Ну, что можно сказать, али экспресс как всегда радует, искал очень долго красивую бабочку к рубашке, но, увы, везде они стоят минимум рублей 500, но я обратился к проверенному али экспресс, и он, как вообщем и всегда, не подвёл.
+              </blockquote>
+            </div>
+          </div>
 
+        </div>
       </div>
     </section>
 
@@ -117,6 +129,7 @@
 
   </footer>
   <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/slick.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 
