--- a/www/catalog.html
+++ b/www/catalog.html
@@ -16,7 +16,7 @@
         <nav class="main-nav">
           <ul>
             <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="">Отзывы</a></li>
+            <li><a href="reviews.html">Отзывы</a></li>
             <li><a href="contacts.html">Контакты</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
