сделал фильтрацию на странице каталога

--- a/www/catalog.html
+++ b/www/catalog.html
@@ -29,29 +29,107 @@
 
   <main>
 
-    <section class="portfolio">
+    <section class="portfolio portfolio-catalog">
       <div class="portfolio-inner">
         <h2 class="portfolio-title">Наши работы</h2>
-        <div class="portfolio-visual">
-          <figure class="portfolio-figure">
-            <img src="images/one-butterfly.png" alt="одна синяя галстук-бабочка" class="portfolio-image">
+
+        <ul class="filter">
+          <li class="filter-item">
+            <a href="#" class="filter-link active" data-filter="all">Все</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link" data-filter="strict">Строгие</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link" data-filter="fun">Весёлые</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link" data-filter="pets">Для животных</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link" data-filter="kids">Детские</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link" data-filter="adult">Для взрослых</a>
+          </li>
+        </ul>
+
+        <ul class="catalog-list">
+          <li class="catalog-item" data-type="strict">
+            <figure class="portfolio-figure">
+            <img src="images/one-butterfly.png" alt="" class="portfolio-image">
             <figcaption class="portfolio-desc">Бабочка такая</figcaption>
           </figure>
-          <figure class="portfolio-figure">
-            <img src="images/two-butterfly.jpg" alt="две синие галстук-бабочки" class="portfolio-image">
+        </li>
+          <li class="catalog-item" data-type="strict">
+            <figure class="portfolio-figure">
+            <img src="images/two-butterfly.jpg" alt="" class="portfolio-image">
             <figcaption class="portfolio-desc">Бабочка растакая</figcaption>
           </figure>
-          <figure class="portfolio-figure">
-            <img src="images/men-butterfly.png" alt="мужчина в галстук-бабочке" class="portfolio-image">
+        </li>
+          <li class="catalog-item" data-type="adult">
+            <figure class="portfolio-figure">
+            <img src="images/men-butterfly.png" alt="" class="portfolio-image">
             <figcaption class="portfolio-desc">Бабочка сякая</figcaption>
           </figure>
-          <figure class="portfolio-figure">
-            <img src="images/cat-butterfly.png" alt="кот в галстук-бабочке" class="portfolio-image">
+        </li>
+          <li class="catalog-item" data-type="pets">
+            <figure class="portfolio-figure">
+            <img src="images/cat-butterfly.png" alt="" class="portfolio-image">
             <figcaption class="portfolio-desc">Кривая</figcaption>
           </figure>
-        </div>
+        </li>
+          <li class="catalog-item" data-type="adult">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-5.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка такая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="adult">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-6.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка растакая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="kids">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-7.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка сякая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="adult">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-8.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Кривая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="strict">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-9.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка такая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="strict">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-10.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка растакая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="fun">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-11.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Бабочка сякая</figcaption>
+          </figure>
+        </li>
+          <li class="catalog-item" data-type="fun">
+            <figure class="portfolio-figure">
+            <img src="images/btfly-12.png" alt="" class="portfolio-image">
+            <figcaption class="portfolio-desc">Кривая</figcaption>
+          </figure>
+        </li>
+        </ul>
 
-      <a href="#" class="btn">       Все бабочки       </a>
+      <a href="#" class="btn">Больше бабочек</a>
       </div>
     </section>
 
