--- a/www/catalog.html
+++ b/www/catalog.html
@@ -29,9 +29,9 @@
 
   <main>
 
-    <section class="portfolio portfolio-catalog">
-      <div class="portfolio-inner">
-        <h2 class="portfolio-title">Наши работы</h2>
+    <section class="catalog">
+      <div class="catalog-inner">
+        <h2 class="catalog-title">Наши работы</h2>
 
         <ul class="filter">
           <li class="filter-item">
@@ -57,25 +57,25 @@
         <ul class="catalog-list">
           <li class="catalog-item" data-type="strict">
             <figure class="portfolio-figure">
-            <img src="images/one-butterfly.png" alt="" class="portfolio-image">
+            <img src="images/one-butterfly.png" alt="Одна бабочка " class="portfolio-image">
             <figcaption class="portfolio-desc">Бабочка такая</figcaption>
           </figure>
         </li>
           <li class="catalog-item" data-type="strict">
             <figure class="portfolio-figure">
-            <img src="images/two-butterfly.jpg" alt="" class="portfolio-image">
+            <img src="images/two-butterfly.jpg" alt="Две бабочки" class="portfolio-image">
             <figcaption class="portfolio-desc">Бабочка растакая</figcaption>
           </figure>
         </li>
           <li class="catalog-item" data-type="adult">
             <figure class="portfolio-figure">
-            <img src="images/men-butterfly.png" alt="" class="portfolio-image">
+            <img src="images/men-butterfly.png" alt="Мужская бабочка" class="portfolio-image">
             <figcaption class="portfolio-desc">Бабочка сякая</figcaption>
           </figure>
         </li>
           <li class="catalog-item" data-type="pets">
             <figure class="portfolio-figure">
-            <img src="images/cat-butterfly.png" alt="" class="portfolio-image">
+            <img src="images/cat-butterfly.png" alt="Кошачья бабочка" class="portfolio-image">
             <figcaption class="portfolio-desc">Кривая</figcaption>
           </figure>
         </li>
@@ -129,7 +129,7 @@
         </li>
         </ul>
 
-      <a href="#" class="btn">Больше бабочек</a>
+      <button class="btn j-catalog-btn">Больше бабочек</button>
       </div>
     </section>
 
