полный адаптив в процессе

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -14,14 +14,14 @@
       <div class="header-wrap">
         <a href="index.html" class="logo">Butterfly</a>
         <nav class="main-nav">
-          <ul>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="reviews.html">Отзывы</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+          <ul class="main-nav-list">
+            <li class="main-nav-item"><a class="main-nav-link" href="catalog.html">Каталог</a></li>
+            <li class="main-nav-item"><a class="main-nav-link" href="reviews.html">Отзывы</a></li>
+            <li class="main-nav-item"><a class="main-nav-link active" href="contacts.html">Контакты</a></li>
+            <li class="main-nav-item"><a class="main-nav-link" href="faq.html">FAQ</a></li>
           </ul>
         </nav>
-        <button class="burger">menu</button>
+        <button class="burger" style="background-image: url(images/hamburger-menu.png);">menu</button>
       </div>
     </div>
 
